Criando pagina de login e function no JS

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form onsubmit="soma(event)">
+                <form onsubmit="novaTransacao(event)">
                     <div class="mb-3">
                       <label for="description" class="form-label">Descrição</label>
                       <input type="text" class="form-control" id="description">
@@ -75,7 +75,7 @@
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-                      <button class="btn btn-success">Salvar</button>
+                      <button class="btn btn-success" data-bs-dismiss="modal">Salvar</button>
                     </div>
                   </form>
             </div>
